--- a/app/assets/stylesheets/partials/_homepage.scss
+++ b/app/assets/stylesheets/partials/_homepage.scss
@@ -4,13 +4,13 @@
 
   h2 {
     text-align: center;
-    text-shadow: rgba(0,0,0,0.4) 0 2px 4px;
     padding: 1em 0;
   }
 
   #what-my-usa-does {
 
     border-bottom: 2px solid #EEF2F4;
+    padding-bottom: 30px;
 
     @include outer-container;
 
@@ -23,7 +23,12 @@
          @include span-columns(4);
       }
 
-      h3 { padding: 15px 0; }
+      h3 { 
+        padding: 15px 0; 
+        font-weight: 600;
+        width: 200px;
+        margin: 0 auto;
+      }
 
       .icon {
         width: 100px;
@@ -37,22 +42,28 @@
   }
 
   #account-management {
-      
+      padding: 30px 0;
       text-align: center;
       width: 75%;
       margin: 0 auto;
 
-      h3 { padding-bottom: 30px; }
+      h3 { 
+        font-weight: 500;
+        @include media($large-screen) {
+          width: 500px;
+          margin: 0 auto;
+        }
+      }
 
       ol {
         font-size: 1.2em;
         margin: 0 auto;
-        padding-bottom: 30px;
+        padding: 30px 0;
 
         li { 
           margin-bottom: 20px;
           text-align: left;
-
+          font-weight: 400;
           @include media($large-screen) {
               display: inline;
               margin-bottom: 0;
@@ -62,7 +73,7 @@
           span {
             border-radius: 100%;
             padding: 2px 10px;
-            background-color: #86C779;
+            background-color: #008C46;
             color: white;
           }
         }
